[gd_scene load_steps=3 format=3 uid="uid://cs4jvv78l7rkq"]

[ext_resource type="Script" path="res://gui/Settings.gd" id="1_j7rhw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mi8gs"]
bg_color = Color(0.152941, 0.176471, 0.298039, 0.905882)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Settings" type="Control"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j7rhw")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(500, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mi8gs")

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="FlowContainer" type="FlowContainer" parent="PanelContainer/CenterContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_constants/v_separation = 5
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/CenterContainer/FlowContainer"]
layout_mode = 2
text = "Location"

[node name="OptionButton" type="OptionButton" parent="PanelContainer/CenterContainer/FlowContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
item_count = 3
popup/item_0/text = "qqqqqq"
popup/item_0/id = 0
popup/item_1/text = ""
popup/item_1/id = 1
popup/item_1/separator = true
popup/item_2/text = "www"
popup/item_2/id = 2

[node name="LineEdit" type="LineEdit" parent="PanelContainer/CenterContainer/FlowContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer/CenterContainer/FlowContainer"]
layout_mode = 2
columns = 2

[node name="Longitude" type="Label" parent="PanelContainer/CenterContainer/FlowContainer/GridContainer"]
layout_mode = 2
text = "Longitude"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LongitudeEdit" type="LineEdit" parent="PanelContainer/CenterContainer/FlowContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "aaaaaaa"
alignment = 1

[node name="Latitude" type="Label" parent="PanelContainer/CenterContainer/FlowContainer/GridContainer"]
layout_mode = 2
text = "Latitude"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LatitudeEdit" type="LineEdit" parent="PanelContainer/CenterContainer/FlowContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "eeee"
alignment = 1

[node name="CloseButton" type="Button" parent="PanelContainer/CenterContainer/FlowContainer"]
layout_mode = 2
text = "Close"

[connection signal="item_selected" from="PanelContainer/CenterContainer/FlowContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="PanelContainer/CenterContainer/FlowContainer/CloseButton" to="." method="_on_close_button_pressed"]
